--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Cool-Turbo - CodePen</title>
+  <title>Cool-Turbo</title>
   <link rel="stylesheet" href="http://s.codepen.io/assets/reset/normalize.css" />
   <script type="text/javascript" src="http://s.codepen.io/assets/libs/prefixfree.min.js"></script>
   <style type="text/css">
