--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <head>
   <title>Cool-Turbo</title>
-  <link rel="stylesheet" href="/assets/styles/style.css" />
-  <link rel="stylesheet" href="/assets/styles/normalize.css" />
-  <script type="text/javascript" src="/assets/scripts/prefixfree.min.js"></script>
+  <link rel="stylesheet" href="assets/styles/style.css" />
+  <link rel="stylesheet" href="assets/styles/normalize.css" />
+  <script type="text/javascript" src="assets/scripts/prefixfree.min.js"></script>
 </head>
 <body>
   <div class="logo">Cool-Turbo</div>
