--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta content='Kaushalya Mandaliya' name='author'/>
   <head>
   <title>Cool-Turbo</title>
+  <link href="//fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="assets/styles/style.css" />
   <link rel="stylesheet" href="assets/styles/normalize.css" />
 </head>
